@@ -1,10 +1,7 @@
 package com.microservice.landing;
 
-import com.microservice.landing.controller.LandingQueryController;
-import com.microservice.landing.dto.LandingGetDTO;
 import com.microservice.landing.entity.Landing;
 import com.microservice.landing.repository.LandingRepository;
-import com.microservice.landing.service.query.LandingQueryServceImpl;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -18,7 +15,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-public class LandingQueryTest {
+class LandingQueryTest {
 
 
     @InjectMocks
@@ -29,7 +26,8 @@ public class LandingQueryTest {
 
     @Test
     void verLandingPage(){
-        when(landingRepository.findAll()).thenReturn(Arrays.asList(landing));
+        when(landingRepository.findAll()).thenReturn(List.of(landing));
         assertNotNull(landingRepository.findAll());
     }
+
 }
